# minify-fc

./: .clang-format  .gitignore  .mxproject  CLAUDE.md  CMakeLists.txt  minifly-fc.ioc
CORE/Inc/: main.h  stm32f4xx_it.h
CORE/Src/: dma.c  gpio.c  spi.c
Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_hal_conf.h
Core/Inc/app/: app_boot.h  app_hooks.h  app_tasks.h
Core/Inc/platform/: platform_init.h
Core/Inc/services/: config_service.h  config_types.h  console_service.h  pm_service.h
Core/Src/: adc.c  freertos.c  gpio.c  i2c.c  iwdg.c  main.c  tim.c
Core/Src/app/: app_boot.c  app_hooks.c  app_tasks.c
Core/Src/platform/: platform_init.c
Core/Src/services/: config_service.c  console_service.c  pm_service.c
Docs/: hardware.md  software_architecture_plan.md
Drivers/BSP/Inc/: bsp_flash.h  bsp_led.h  bsp_module.h  bsp_motors.h  bsp_sensors.h  bsp_watchdog.h
Drivers/BSP/Src/: bsp_flash.c  bsp_led.c  bsp_module.c  bsp_motors.c  bsp_sensors.c  bsp_watchdog.c
Temp/Src/: adc.c  stm32f4xx_it.c  usart.c
Test/: CMakeLists.txt
Test/src/: bsp_led_api_compile_test.c  bsp_motors_api_compile_test.c  bsp_watchdog_api_compile_test.c
cmake/stm32cubemx/: CMakeLists.txt
